Adjust test to handle location as well

--- a/tests/integration/targets/v3.1/tasks/netbox_rack.yml
+++ b/tests/integration/targets/v3.1/tasks/netbox_rack.yml
@@ -11,6 +11,7 @@
     data:
       name: "Test rack one"
       site: "Test Site"
+      location: "Test Rack Group"
   register: test_one
 
 - name: "1 - ASSERT"
@@ -65,6 +66,7 @@
     data:
       name: Test rack one
       site: Test Site
+      location: "Test Rack Group"
     state: present
   register: test_four
 
