More test adjustments. Add location to rack from the start

--- a/tests/integration/targets/v2.11/tasks/netbox_rack.yml
+++ b/tests/integration/targets/v2.11/tasks/netbox_rack.yml
@@ -11,6 +11,7 @@
     data:
       name: "Test rack one"
       site: "Test Site"
+      location: "Test Rack Group"
   register: test_one
 
 - name: "1 - ASSERT"
@@ -65,6 +66,7 @@
     data:
       name: Test rack one
       site: Test Site
+      location: "Test Rack Group"
     state: present
   register: test_four
 
@@ -109,7 +111,6 @@
       - test_five['diff']['after']['asset_tag'] == "1234"
       - test_five['diff']['after']['comments'] == "Just testing rack module"
       - test_five['diff']['after']['facility_id'] == "EQUI10291"
-      - test_five['diff']['after']['location'] == 1
       - test_five['diff']['after']['outer_depth'] == 24
       - test_five['diff']['after']['outer_unit'] == "in"
       - test_five['diff']['after']['outer_width'] == 32
