--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,9 @@ jobs:
       matrix:
         include:
           - python-version: 3.8
+            VERSION: "v2.11"
+            INTEGRATION_TESTS: "v2.11"
+          - python-version: 3.8
             VERSION: "v3.0"
             INTEGRATION_TESTS: "v3.0"
           - python-version: 3.8
@@ -61,6 +64,27 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+        if: matrix.VERSION == 'v2.11'
+      - name: Clone & Start netbox-docker containers - 2.11
+        env:
+          VERSION: ${{ matrix.VERSION }}
+        run: |
+          cd ..
+          git clone https://github.com/netbox-community/netbox-docker.git
+          cd netbox-docker
+          git checkout 1.2.0
+          tee docker-compose.override.yml <<EOF
+          version: '3.4'
+          services:
+            netbox:
+              image: netboxcommunity/netbox:v2.11
+              ports:
+                - 32768:8080
+          EOF
+          docker-compose up -d --quiet-pull
+          docker container ls
+          cd ..
+        if: matrix.VERSION == 'v2.11'
       - name: Clone & Start netbox-docker containers - 3.0
         env:
           VERSION: ${{ matrix.VERSION }}
