Remove v3.0 tests. Comment out non-working tests for 3.3.

--- a/tests/integration/targets/v3.3/tasks/netbox_vm_interface.yml
+++ b/tests/integration/targets/v3.3/tasks/netbox_vm_interface.yml
@@ -57,11 +57,11 @@
       untagged_vlan:
         name: Wireless
         site: Test Site
-      tagged_vlans:
-        - name: Data
-          site: Test Site
-        - name: VoIP
-          site: Test Site
+      #tagged_vlans:
+      #  - name: Data
+      #    site: Test Site
+      #  - name: VoIP
+      #    site: Test Site
       tags:
         - "Schnozzberry"
     state: present
@@ -87,7 +87,7 @@
       - test_three['interface']['description'] == "Updated test100-vm"
       - test_three['interface']['mode'] == "tagged"
       - test_three['interface']['untagged_vlan'] == 1
-      - test_three['interface']['tagged_vlans'] == [2, 3]
+      #- test_three['interface']['tagged_vlans'] == [2, 3]
       - test_three['interface']['tags'][0] == 4
       - test_three['msg'] == "interface Eth10 updated"
 
@@ -124,11 +124,11 @@
       untagged_vlan:
         name: Wireless
         site: Test Site
-      tagged_vlans:
-        - name: Data
-          site: Test Site
-        - name: VoIP
-          site: Test Site
+      #tagged_vlans:
+      #  - name: Data
+      #    site: Test Site
+      #  - name: VoIP
+      #    site: Test Site
       tags:
         - "Schnozzberry"
     state: present
@@ -154,6 +154,6 @@
       - test_five['interface']['description'] == "Updated test100-vm Eth0 intf"
       - test_five['interface']['mode'] == "tagged"
       - test_five['interface']['untagged_vlan'] == 1
-      - test_five['interface']['tagged_vlans'] == [2, 3]
+      #- test_five['interface']['tagged_vlans'] == [2, 3]
       - test_five['interface']['tags'][0] == 4
       - test_five['msg'] == "interface Eth0 updated"
