--- a/tests/integration/targets/v3.3/tasks/netbox_l2vpn.yml
+++ b/tests/integration/targets/v3.3/tasks/netbox_l2vpn.yml
@@ -50,7 +50,12 @@
       name: "Test L2VPN"
       type: vxlan
       tenant: "Test Tenant"      
-      description: Updated description      
+      description: Updated description   
+      import_targets:
+        - "4000:4000"
+        - "5000:5000"   
+      export_targets:
+        - "6000:6000"
       tags:
         - "Schnozzberry"
     state: present
@@ -61,9 +66,13 @@
     that:
       - test_four is changed            
       - test_four['diff']['after']['description'] == "Updated description"
+      - test_four['diff']['after']['import_targets'] == [1, 2]
+      - test_four['diff']['after']['export_targets'] == [3]
       - test_four['diff']['after']['tags'][0] == 4
       - test_four['l2vpn']['name'] == "Test L2VPN"
-      - test_four['l2vpn']['tenant'] == 1                      
+      - test_four['l2vpn']['tenant'] == 1  
+      - test_four['l2vpn']['import_targets'] == [1, 2]
+      - test_four['l2vpn']['export_targets'] == [3]                    
       - test_four['l2vpn']['description'] == "Updated description"
       - test_four['l2vpn']['tags'][0] == 4
       - test_four['msg'] == "l2vpn Test L2VPN updated"
