--- a/tests/integration/targets/v3.3/tasks/main.yml
+++ b/tests/integration/targets/v3.3/tasks/main.yml
@@ -246,3 +246,12 @@
         - netbox_l2vpn
   tags:
     - netbox_l2vpn
+
+- name: "NETBOX_INVENTORY_ITEM_ROLE TESTS"
+  include_tasks: 
+    file: "netbox_inventory_item_role.yml"
+    apply:
+      tags:
+        - netbox_inventory_item_role
+  tags:
+    - netbox_inventory_item_role
