--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ cryptography = "*"
 jinja2 = "*"
 jmespath = "*"
 jsondiff = "*"
-pynetbox = "*"
+pynetbox = "^6"
 pytest = "*"
 pytest-mock = "*"
 pytest-xdist = "*"
