--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pynetbox = "^6"
 pytest = "*"
 pytest-mock = "*"
 pytest-xdist = "*"
+pytest-forked = "*"
 pyyaml = "*"
 mock = "^4.0.2"
 antsibull = "*"
