--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,15 +15,17 @@ cryptography = "*"
 jinja2 = "*"
 jmespath = "*"
 jsondiff = "*"
-pynetbox = "*"
+pynetbox = "^6"
 pytest = "*"
 pytest-mock = "*"
 pytest-xdist = "*"
+pytest-forked = "*"
 pyyaml = "*"
 mock = "^4.0.2"
 antsibull = "*"
 importlib-metadata = "*"
 pylint = "*"
+pytz = "*"
 packaging = "*"
 
 [tool.poetry.dev-dependencies]
