--- a/tests/integration/targets/v3.4/tasks/netbox_custom_link.yml
+++ b/tests/integration/targets/v3.4/tasks/netbox_custom_link.yml
@@ -33,7 +33,7 @@
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
-      content_type: 
+      content_types: 
         - "dcim.device"
       name: Custom Link
       link_text: Open Web management
