--- a/changelogs/fragments/serial_and_asset.yml
+++ b/changelogs/fragments/serial_and_asset.yml
@@ -1,3 +1,3 @@
 ---
 minor_changes:
-  - nb_inventory - extract serial and asset_tag from devices.
+  - nb_inventory - extract serial and asset_tag from devices
