Added tests for ASN module

--- a/tests/integration/targets/v3.4/tasks/main.yml
+++ b/tests/integration/targets/v3.4/tasks/main.yml
@@ -273,3 +273,6 @@
         - netbox_service_template
   tags:
     - netbox_service_template
+
+- name: "NETBOX_ASN TESTS"
+  include_tasks: "netbox_asn.yml"
