--- a/tests/integration/targets/v3.3/tasks/main.yml
+++ b/tests/integration/targets/v3.3/tasks/main.yml
@@ -264,3 +264,6 @@
         - netbox_module_type
   tags:
     - netbox_module_type
+
+- name: "NETBOX_ASN TESTS"
+  include_tasks: "netbox_asn.yml"
