Added tests for the FHRP groups module

--- a/tests/integration/targets/v3.2/tasks/main.yml
+++ b/tests/integration/targets/v3.2/tasks/main.yml
@@ -238,3 +238,6 @@
 
 - name: "NETBOX_ASN TESTS"
   include_tasks: "netbox_asn.yml"
+
+- name: "NETBOX_FHRP_GROUP TESTS"
+  include_tasks: "netbox_fhrp_group.yml"
