--- a/tests/integration/targets/v3.4/tasks/main.yml
+++ b/tests/integration/targets/v3.4/tasks/main.yml
@@ -276,3 +276,6 @@
 
 - name: "NETBOX_ASN TESTS"
   include_tasks: "netbox_asn.yml"
+
+- name: "NETBOX_FHRP_GROUP TESTS"
+  include_tasks: "netbox_fhrp_group.yml"
